Agrego clases faltantes a la navbar

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./paginas/servicios.html">Servicios</a>
                         </li>
-                        <li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./paginas/sobrenosotros.html">Sobre Nosotros</a>
                         </li>
-                        <li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
                         </li>
                     </ul>
