--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -38,10 +38,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./servicios.html">Servicios</a>
                         </li>
-                        <li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./sobrenosotros.html">Sobre Nosotros</a>
                         </li>
-                        <li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
