Modifico y casi finalizo  html y css de la seccion productos

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -60,24 +60,44 @@
             </div>
         </section>
         <section class="productos-seccion-2">
-            <div id="productos-main-titulo">
-                <h1>Productos</h1>
+            <div class="box-shadow productos-frase-productos">
+                <h3>Estos son algunos de los productos que encontrarás en Eléctrica Janny, todos con la mayor calidad
+                    para que asegurar la durabilidad de cada material eléctrico que adquieras</h3>
+                <img src="../imgs/productos-img-dibujo.jpg" alt="Dibujos de productos">
             </div>
-            <div>
-                <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 1">
-                <h2>Producto 1</h2>
-            </div>
-            <div>
-                <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 2">
-                <h2>Producto 2</h2>
-            </div>
-            <div>
-                <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 3">
-                <h2>Producto 3</h2>
-            </div>
-            <div>
-                <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 4">
-                <h2>Producto 4</h2>
+            <div class="productos-contain-imgs">
+                <div>
+                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 1" class="box-shadow">
+                    <h2>Producto 1</h2>
+                </div>
+                <div>
+                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 2" class="box-shadow">
+                    <h2>Producto 2</h2>
+                </div>
+                <div>
+                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 3" class="box-shadow">
+                    <h2>Producto 3</h2>
+                </div>
+                <div>
+                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 4" class="box-shadow">
+                    <h2>Producto 4</h2>
+                </div>
+                <div>
+                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 5" class="box-shadow">
+                    <h2>Producto 5</h2>
+                </div>
+                <div>
+                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 6" class="box-shadow">
+                    <h2>Producto 6</h2>
+                </div>
+                <div>
+                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 7" class="box-shadow">
+                    <h2>Producto 7</h2>
+                </div>
+                <div>
+                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 8" class="box-shadow">
+                    <h2>Producto 8</h2>
+                </div>
             </div>
         </section>
     </main>
