Modifico y casi termino la seccion Servicios

--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -61,57 +61,58 @@
         </section>
         <section>
             <article class="servicios-articulo-1">
-                <div class="servicios-titulo">
-                    <h1>Ofrecemos estos servicios</h1>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repellat necessitatibus saepe
-                        reiciendis obcaecati tenetur, dignissimos alias ducimus modi illum qui quidem quaerat a
-                        voluptatibus ullam, explicabo harum iste non!
-                        Obcaecati odio dicta voluptatibus magni id eligendi doloribus repudiandae ab amet dolor adipisci
-                        ullam, expedita eaque laborum temporibus? Fugiat necessitatibus quae nam ipsum iure dolor error
-                        laboriosam ad nemo ea?
-                        Earum expedita facilis similique omnis non aliquam. Sint, optio magni dolor temporibus rem quo
-                        possimus maxime, quas nemo fugiat pariatur corporis, ab praesentium placeat deleniti eos magnam
-                        error nihil laborum.</p>
-                    <h2>Servicio 1</h2>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repellat necessitatibus saepe
-                        reiciendis obcaecati tenetur, dignissimos alias ducimus modi illum qui quidem quaerat a
-                        voluptatibus ullam, explicabo harum iste non!
-                        Obcaecati odio dicta voluptatibus magni id eligendi doloribus repudiandae ab amet dolor adipisci
-                        ullam, expedita eaque laborum temporibus? Fugiat necessitatibus quae nam ipsum iure dolor error
-                        laboriosam ad nemo ea?
-                        Earum expedita facilis similique omnis non aliquam. Sint, optio magni dolor temporibus rem quo
-                        possimus maxime, quas nemo fugiat pariatur corporis, ab praesentium placeat deleniti eos magnam
-                        error nihil laborum.</p>
-                    <h2>Servicio 2</h2>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repellat necessitatibus saepe
-                        reiciendis obcaecati tenetur, dignissimos alias ducimus modi illum qui quidem quaerat a
-                        voluptatibus ullam, explicabo harum iste non!
-                        Obcaecati odio dicta voluptatibus magni id eligendi doloribus repudiandae ab amet dolor adipisci
-                        ullam, expedita eaque laborum temporibus? Fugiat necessitatibus quae nam ipsum iure dolor error
-                        laboriosam ad nemo ea?
-                        Earum expedita facilis similique omnis non aliquam. Sint, optio magni dolor temporibus rem quo
-                        possimus maxime, quas nemo fugiat pariatur corporis, ab praesentium placeat deleniti eos magnam
-                        error nihil laborum.</p>
-                    <h2>Servicio 3</h2>
-                </div>
-            </article>
-            <article class="servicios-articulo-2">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed voluptatibus aliquid a
-                        exercitationem enim explicabo magnam nulla ea, dolor suscipit repellendus pariatur temporibus,
-                        animi adipisci cupiditate itaque nesciunt delectus consectetur?
-                        Saepe repudiandae quas nobis eligendi minima hic, quaerat sequi aspernatur neque reiciendis
-                        tenetur cum culpa ea optio obcaecati qui nisi architecto laudantium doloribus earum sapiente
-                        repellat maxime suscipit? Explicabo, animi.</p>
-                </div>
-                <div>
-                    <img src="../imgs/foto-servicios.jpg" alt="Foto-de-servicios">
+                <div class="card-group">
+                    <div class="card">
+                        <img src="../imgs/servicio-casa-card.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Trabajos</b></h5>
+                            <span class="card-text">
+                                <ul>
+                                    <li class="list-style-type-disc">
+                                        Elaboración de proyectos eléctricos en baja y media tensión</li>
+                                    <li class="list-style-type-disc">Instalaciones eléctricas en baja y media tensión:
+                                        <ul class="list-style-type-circle">
+                                            <li>Residencial</li>
+                                            <li>Comercial</li>
+                                            <li>Industrial</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="../imgs/servicios-foco-card.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Reparaciones</b></h5>
+                            <span class="card-text">
+                                <ul>
+                                    <li class="list-style-type-disc">Servicio de reparación de:
+                                        <ul class="list-style-type-circle">
+                                            <li>Equipo de bombeo</li>
+                                            <li>Motores eléctricos</li>
+                                            <li>Transformadores</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="../imgs/servicio-hombre-card.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Ventas</b></h5>
+                            <span class="card-text">
+                                <ul>
+                                    <li class="list-style-type-disc">Venta de equipo industrial</li>
+                                    <li class="list-style-type-disc">Venta de material eléctrico de baja y media tensión
+                                    </li>
+                                    <li class="list-style-type-disc">Venta todo tipo de artículos, materiales e insumos
+                                        eléctricos </li>
+                                </ul>
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </article>
         </section>
