Modifico la seccion Sobre Nosotros

--- a/paginas/sobrenosotros.html
+++ b/paginas/sobrenosotros.html
@@ -59,44 +59,39 @@
                 <h2>SOBRE NOSOTROS</h2>
             </div>
         </section>
-        <section>
-            <article class="sobrenosotros-articulo-1">
-                <div class="sobrenosotros-titulo">
-                    <h1>Sobre Nosotros</h1>
+        <section class="sobrenosotros-seccion-2">
+            <div class="container text-center">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                    <div class="col sobrenosotros-imgs">
+                        <img src="../imgs/ejemplo-sobrenosotros-1.jpg" alt="Articulos de tienda" class="box-shadow">
+                    </div>
+                    <div class="col sobrenosotros-texto">
+                        <h2>QUIÉNES SOMOS</h2>
+                        <p>Eléctrica Janny, es una empresa 100% mexicana con
+                            más de 10 años en el ramo de la distribución de material eléctrico e iluminación, fundada
+                            con el propósito de atender los mercados de la industria, de la construcción, industrial y
+                            minoristas.</p>
+                    </div>
+                    <div class="col sobrenosotros-imgs">
+                        <img src="../imgs/sobrenosotros-local-calle.jpeg" alt="" class="box-shadow">
+                    </div>
+                    <div class="col sobrenosotros-texto">
+                        <h2>MISION</h2>
+                        <p>Proveer a nuestros clientes soluciones innovadoras a través de la distribución de nuevos
+                            productos y la oferta de una amplia gama de servicios para satisfacer las necesidades de un
+                            mercado diverso y en constante cambio, con el activo más valioso, nuestra gente.</p>
+                    </div>
+                    <div class="col sobrenosotros-imgs">
+                        <img src="../imgs/sobrenosotros-centros-de-carga-grande.jpeg" alt="" class="box-shadow">
+                    </div>
+                    <div class="col sobrenosotros-texto">
+                        <h2>VISION</h2>
+                        <p>Ofrecer una solución integral en la venta y distribución de materiales eléctricos e
+                            iluminación de las mejores marcas, con los precios más bajos, atención personalizada asi
+                            como asesoría técnica para satisfacer las necesidades de nuestros clientes.</p>
+                    </div>
                 </div>
-                <img src="../imgs/ejemplo-sobrenosotros-1.jpg" alt="local-ej">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam illum impedit, ipsum cum inventore
-                    nostrum temporibus quae ducimus sit hic aperiam iste tenetur accusamus fugit autem, consequatur
-                    dignissimos amet aliquam.
-                    Ex ad ratione explicabo error nisi quasi eaque repellendus inventore illo nobis. Exercitationem
-                    voluptatibus minus alias saepe nulla repellendus, inventore corporis, non atque doloremque,
-                    voluptatum incidunt dignissimos ducimus beatae esse.
-                    Minima culpa quos repellat rerum laboriosam soluta odio alias molestias, dolorum sed laborum numquam
-                    quae nisi officia quia voluptatum adipisci aliquid distinctio itaque et voluptates dolor nemo
-                    mollitia. Tempora, dolorum.</p>
-                <img src="../imgs/ejemplo-sobrenosotros-2.jpg" alt="ejemplo-sobrenosotros-2">
-            </article>
-            <article class="sobrenosotros-articulo-2">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam illum impedit, ipsum cum inventore
-                    nostrum temporibus quae ducimus sit hic aperiam iste tenetur accusamus fugit autem, consequatur
-                    dignissimos amet aliquam.
-                    Ex ad ratione explicabo error nisi quasi eaque repellendus inventore illo nobis. Exercitationem
-                    voluptatibus minus alias saepe nulla repellendus, inventore corporis, non atque doloremque,
-                    voluptatum incidunt dignissimos ducimus beatae esse.
-                    Minima culpa quos repellat rerum laboriosam soluta odio alias molestias, dolorum sed laborum numquam
-                    quae nisi officia quia voluptatum adipisci aliquid distinctio itaque et voluptates dolor nemo
-                    mollitia. Tempora, dolorum.</p>
-                <img src="../imgs/ejemplo-sobrenosotros-3.jpg" alt="orgullosos-de-ser-mexicanos">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam illum impedit, ipsum cum inventore
-                    nostrum temporibus quae ducimus sit hic aperiam iste tenetur accusamus fugit autem, consequatur
-                    dignissimos amet aliquam.
-                    Ex ad ratione explicabo error nisi quasi eaque repellendus inventore illo nobis. Exercitationem
-                    voluptatibus minus alias saepe nulla repellendus, inventore corporis, non atque doloremque,
-                    voluptatum incidunt dignissimos ducimus beatae esse.
-                    Minima culpa quos repellat rerum laboriosam soluta odio alias molestias, dolorum sed laborum numquam
-                    quae nisi officia quia voluptatum adipisci aliquid distinctio itaque et voluptates dolor nemo
-                    mollitia. Tempora, dolorum.</p>
-            </article>
+            </div>
         </section>
     </main>
 
