Arreglos semánticos y mejoras en el formulario

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -68,24 +68,37 @@
                     <legend>Formulario de contacto</legend>
                 </div>
                 <div class="form-all form-casillas">
-                    <label for="nombre"></label>
-                    <input type="text" placeholder="Nombre" name="nombre" required minlength="3" id="input-nombre" class="form-casillas">
-                    <label for="apellido"></label>
-                    <input type="text" placeholder="Apellido" name="apellido" required id="input-apellido" class="form-casillas">
+                    <div>
+                        <label for="nombre">Nombre/s</label>
+                        <input type="text" placeholder="Nombre/s" name="nombre" required minlength="3" id="input-nombre"
+                            class="form-casillas">
+                    </div>
+                    <div>
+                        <label for="apellido">Apellidos</label>
+                        <input type="text" placeholder="Apellidos" name="apellido" required id="input-apellido"
+                            class="form-casillas">
+                    </div>
                 </div>
                 <div class="form-all form-casillas">
-                    <label for="correo"></label>
-                    <input type="email" placeholder="Email" name="correo" required id="input-email" class="form-casillas">
+                    <div>
+                        <label for="correo">Correo Electrónico</label>
+                        <input type="email" placeholder="Email" name="correo" required id="input-email"
+                            class="form-casillas">
+                    </div>
                 </div>
                 <div class="form-all form-casillas">
-                    <label for="telefono"></label>
-                    <input type="tel" placeholder="Teléfono" name="telefono" id="input-telefono" class="form-casillas">
+                    <div>
+                        <label for="telefono">Teléfono</label>
+                        <input type="tel" placeholder="Teléfono" name="telefono" id="input-telefono"
+                            class="form-casillas">
+                    </div>
                 </div>
-                <div class="form-all form-legend">Cuéntanos tu experiencia</div>
-                <div class="form-all form-div">
-                    <label for="comentario"></label>
-                    <textarea class="form-casillas" placeholder="Escribe tu comentario" name="comentario" id="textarea-comentario" cols=""
-                        rows="6"></textarea>
+                <div class="form-all form-textarea">
+                    <div>
+                        <label for="comentario">Cuéntanos tu experiencia</label>
+                        <textarea class="form-casillas" placeholder="Escribe tu comentario" name="comentario"
+                            id="textarea-comentario" cols="" rows="6"></textarea>
+                    </div>
                 </div>
                 <div class="form-all form-div-span">
                     <span class="form-span">
