--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -66,10 +66,10 @@
                         <img src="../imgs/servicio-casa-card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Trabajos</b></h5>
-                            <span class="card-text">
+                            <div class="card-text">
                                 <ul>
-                                    <li class="list-style-type-disc">
-                                        Elaboración de proyectos eléctricos en baja y media tensión</li>
+                                    <li class="list-style-type-disc">Elaboración de proyectos eléctricos en baja y media
+                                        tensión</li>
                                     <li class="list-style-type-disc">Instalaciones eléctricas en baja y media tensión:
                                         <ul class="list-style-type-circle">
                                             <li>Residencial</li>
@@ -78,14 +78,14 @@
                                         </ul>
                                     </li>
                                 </ul>
-                            </span>
+                            </div>
                         </div>
                     </div>
                     <div class="card">
                         <img src="../imgs/servicios-foco-card.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Reparaciones</b></h5>
-                            <span class="card-text">
+                            <div class="card-text">
                                 <ul>
                                     <li class="list-style-type-disc">Servicio de reparación de:
                                         <ul class="list-style-type-circle">
@@ -95,14 +95,14 @@
                                         </ul>
                                     </li>
                                 </ul>
-                            </span>
+                            </div>
                         </div>
                     </div>
                     <div class="card">
                         <img src="../imgs/servicio-hombre-card.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Ventas</b></h5>
-                            <span class="card-text">
+                            <div class="card-text">
                                 <ul>
                                     <li class="list-style-type-disc">Venta de equipo industrial</li>
                                     <li class="list-style-type-disc">Venta de material eléctrico de baja y media tensión
@@ -110,7 +110,7 @@
                                     <li class="list-style-type-disc">Venta todo tipo de artículos, materiales e insumos
                                         eléctricos </li>
                                 </ul>
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </div>
