Primer uso de SASS

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,7 +9,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Eléctrica Janny</title>
     <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../styles/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -60,22 +60,22 @@
             </div>
         </section>
         <section class="contacto__seccion">
-            <div class="contacto-img box-shadow">
+            <div class="contacto-img">
                 <img src="../imgs/img-contacto.jpeg" alt="Trabajo en proceso">
             </div>
-            <form class="box-shadow">
+            <form class="form">
                 <div class="form-all form-legend">
                     <legend>Formulario de contacto</legend>
                 </div>
                 <div class="form-all form-casillas">
                     <div>
-                        <label for="nombre">Nombre/s</label>
-                        <input type="text" placeholder="Nombre/s" name="nombre" required minlength="3" id="input-nombre"
+                        <label for="nombre">Nombre(s)</label>
+                        <input type="text" placeholder="Nombre(s)" name="nombre" required minlength="3" id="input-nombre"
                             class="form-casillas">
                     </div>
                     <div>
-                        <label for="apellido">Apellidos</label>
-                        <input type="text" placeholder="Apellidos" name="apellido" required id="input-apellido"
+                        <label for="apellido">Apellido</label>
+                        <input type="text" placeholder="Apellido" name="apellido" required id="input-apellido"
                             class="form-casillas">
                     </div>
                 </div>
