--- a/paginas/sobrenosotros.html
+++ b/paginas/sobrenosotros.html
@@ -9,7 +9,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Eléctrica Janny</title>
     <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../styles/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -63,7 +63,7 @@
             <div class="container text-center">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
                     <div class="col sobrenosotros-imgs">
-                        <img src="../imgs/ejemplo-sobrenosotros-1.jpg" alt="Articulos de tienda" class="box-shadow">
+                        <img src="../imgs/ejemplo-sobrenosotros-1.jpg" alt="Articulos de tienda">
                     </div>
                     <div class="col sobrenosotros-texto">
                         <h2>QUIÉNES SOMOS</h2>
@@ -73,7 +73,7 @@
                             minoristas.</p>
                     </div>
                     <div class="col sobrenosotros-imgs">
-                        <img src="../imgs/sobrenosotros-local-calle.jpeg" alt="" class="box-shadow">
+                        <img src="../imgs/sobrenosotros-local-calle.jpeg" alt="">
                     </div>
                     <div class="col sobrenosotros-texto">
                         <h2>MISION</h2>
@@ -82,7 +82,7 @@
                             mercado diverso y en constante cambio, con el activo más valioso, nuestra gente.</p>
                     </div>
                     <div class="col sobrenosotros-imgs">
-                        <img src="../imgs/sobrenosotros-centros-de-carga-grande.jpeg" alt="" class="box-shadow">
+                        <img src="../imgs/sobrenosotros-centros-de-carga-grande.jpeg" alt="">
                     </div>
                     <div class="col sobrenosotros-texto">
                         <h2>VISION</h2>
