--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Eléctrica Janny</title>
     <link rel="shortcut icon" href="./imgs/logo-ej.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./styles/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -73,10 +73,10 @@
                         personalizada.</p>
                 </div>
                 <img src="./imgs/instalacion-sobretecho.jpeg" alt="Instalacion de casa afuera"
-                    class="index-imgs box-shadow">
+                    class="index-imgs">
             </article>
             <article class="index-articulo-2">
-                <img src="./imgs/instalacion-techo-asimetrico.jpeg" alt="Instalacion 2" class="index-imgs box-shadow">
+                <img src="./imgs/instalacion-techo-asimetrico.jpeg" alt="Instalacion 2" class="index-imgs">
                 <div>
                     <p class="index-parrafos-top">Al visitarnos, recibirás asesoría integral sobre cada uno de los
                         servicios
@@ -118,9 +118,9 @@
                     class="fa whatsapp">&#xf232;</i></a>
         </div>
         <div class="footer-copyright">
-            <span class="footer-span-localidad">San Luis Río Colorado, Sonora, México</span>
-            <span class="footer-span-copyrigth">Derechos Reservados 2023</span>
-            <span>By Eléctrica Janny</span>
+            <h3 class="footer-span-localidad">San Luis Río Colorado, Sonora, México</h3>
+            <h3 class="footer-span-copyrigth">Derechos Reservados 2023</>
+            <h3>By Eléctrica Janny</h3>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
