--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -9,7 +9,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Eléctrica Janny</title>
     <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../styles/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -60,42 +60,42 @@
             </div>
         </section>
         <section class="productos-seccion-2">
-            <div class="box-shadow productos-frase-productos">
+            <div class="productos-frase-productos">
                 <h3>Estos son algunos de los productos que encontrarás en Eléctrica Janny, todos con la mayor calidad
                     para que asegurar la durabilidad de cada material eléctrico que adquieras</h3>
                 <img src="../imgs/productos-img-dibujo.jpg" alt="Dibujos de productos">
             </div>
             <div class="productos-contain-imgs">
                 <div>
-                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 1" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 1">
                     <h2>Producto 1</h2>
                 </div>
                 <div>
-                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 2" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 2">
                     <h2>Producto 2</h2>
                 </div>
                 <div>
-                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 3" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 3">
                     <h2>Producto 3</h2>
                 </div>
                 <div>
-                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 4" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 4">
                     <h2>Producto 4</h2>
                 </div>
                 <div>
-                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 5" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 5">
                     <h2>Producto 5</h2>
                 </div>
                 <div>
-                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 6" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 6">
                     <h2>Producto 6</h2>
                 </div>
                 <div>
-                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 7" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 7">
                     <h2>Producto 7</h2>
                 </div>
                 <div>
-                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 8" class="box-shadow">
+                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 8">
                     <h2>Producto 8</h2>
                 </div>
             </div>
