--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Animacion AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Animacion animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Eléctrica Janny</title>
     <link rel="shortcut icon" href="./imgs/logo-ej.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/css/style.css">
+    <!-- Google font -->
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -51,47 +57,56 @@
 
     <main class="index-main grid-main">
         <section class="seccion-principal">
-            <div class="texto-imagen-inicio">
+            <div class="texto-imagen-inicio animate__animated animate__backInDown animate__slow">
                 <h2>Eléctrica Janny</h2>
                 <h3>Instalación y venta de materiales eléctricos</h3>
             </div>
         </section>
         <section class="index-seccion-2">
             <article class="index-articulo-1">
-                <div>
-                    <p class="index-parrafos-top">En <b>Eléctrica Janny</b> somos una empresa dedicada al suministro de
+                <div class="div-parrafos">
+                    <p data-aos="fade-down-right" data-aos-duration="500" class="index-parrafos-top">En <b>Eléctrica
+                            Janny</b> somos una empresa dedicada al suministro de
                         <b>material eléctrico</b> de las principales marcas en San Luis Río Colorado, Sonora.
                     </p>
-                    <p class="index-parrafos">Somos profesionales que se adaptan a las exigencias de tus requerimientos
+                    <p data-aos="fade-right" data-aos-duration="500" class="index-parrafos">Somos profesionales que se
+                        adaptan a las exigencias de tus requerimientos
                         para satisfacer
                         completamente tus necesidades, por lo que te atendemos y asesoramos en un horario muy accesible
                         logrando así que nos visites y aclaremos todas las dudas que tengas.</p>
-                    <p class="index-parrafos">A diferencia de la competencia, al venir a <b>Eléctrica Janny</b>
+                    <p data-aos="fade-up-right" data-aos-duration="500" class="index-parrafos">A diferencia de la
+                        competencia, al venir a <b>Eléctrica Janny</b>
                         encontrarás los mejores productos,
                         siempre en perfectas condiciones para garantizar la durabilidad de cada material eléctrico que
                         lleves, así como trabajo pensado y diseñado con los más altos estándares de calidad y atención
                         personalizada.</p>
                 </div>
-                <img src="./imgs/instalacion-sobretecho.jpeg" alt="Instalacion de casa afuera"
-                    class="index-imgs">
+                <div data-aos="zoom-in-left" class="index-div-img-1">
+                    <img src="./imgs/instalacion-sobretecho.jpeg" alt="Instalacion de casa afuera" class="index-imgs">
+                </div>
             </article>
             <article class="index-articulo-2">
-                <img src="./imgs/instalacion-techo-asimetrico.jpeg" alt="Instalacion 2" class="index-imgs">
-                <div>
-                    <p class="index-parrafos-top">Al visitarnos, recibirás asesoría integral sobre cada uno de los
+                <div data-aos="zoom-in-right" class="index-div-img-2">
+                    <img src="./imgs/instalacion-techo-asimetrico.jpeg" alt="Instalacion de casa afuera"
+                        class="index-imgs">
+                </div>
+                <div class="div-parrafos">
+                    <p data-aos="fade-down-left" data-aos-duration="500" class="index-parrafos-top">Al visitarnos,
+                        recibirás asesoría integral sobre cada uno de los
                         servicios
                         que
                         tenemos.
                         Nos mantenemos actualizados respecto a los productos más innovadores del mercado
                         constantemente.</p>
-                    <p class="index-parrafos">Elaboramos proyectos que se adecuan a lo que nos solicites, por lo que
+                    <p data-aos="fade-left" data-aos-duration="500" class="index-parrafos">Elaboramos proyectos que se
+                        adecuan a lo que nos solicites, por lo que
                         para nosotros trabajar de
                         la
                         mano contigo es lo más importante. Juntos lograremos el mejor resultado.
-                    <p class="index-parrafos">Acércate a nuestra sucursal, visita nuestro <a class="index-sitio-oficial"
-                            href="./index.html">sitio oficial</a> y síguenos en <a class="index-siguenos"
-                            href="https://www.facebook.com/electrijanny" target="_blank"
-                            rel="noopener noreferrer">Facebook</a>, no te
+                    <p data-aos="fade-up-left" data-aos-duration="500" class="index-parrafos">Acércate a nuestra
+                        sucursal, visita nuestro <a class="index-sitio-oficial" href="./index.html">sitio oficial</a> y
+                        síguenos en <a class="index-siguenos" href="https://www.facebook.com/electrijanny"
+                            target="_blank" rel="noopener noreferrer">Facebook</a>, no te
                         pierdas
                         de todos los beneficios y <b>material eléctrico</b> que tenemos para ti.</p>
                 </div>
@@ -120,12 +135,16 @@
         <div class="footer-copyright">
             <h3 class="footer-span-localidad">San Luis Río Colorado, Sonora, México</h3>
             <h3 class="footer-span-copyrigth">Derechos Reservados 2023</>
-            <h3>By Eléctrica Janny</h3>
+                <h3>By Eléctrica Janny</h3>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
