--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Eléctrica Janny</title>
     <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/css/style.css">
@@ -55,7 +57,7 @@
 
     <main class="productos-main grid-main">
         <section class="seccion-principal">
-            <div class="texto-imagen-inicio">
+            <div class="texto-imagen-inicio animate__animated animate__backInDown animate__slow">
                 <h2>NUESTROS PRODUCTOS</h2>
             </div>
         </section>
