Anm a sobrenosotros, arreglo form, agrego active

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Productos</a>
+                            <a class="nav-link active" href="#">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./servicios.html">Servicios</a>
