--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link active" href="#">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./sobrenosotros.html">Sobre Nosotros</a>
