description, keywords, box-shadow variable

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <!-- Animacion animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Eléctrica Janny</title>
+    <!-- Descripcion -->
+    <meta name="description" content="Eléctrica Janny ofrece los mejores productos y materiales eléctricos, así como instalaciones eléctricas satisfaciendo tus necesidades">
+    <!-- Keywords -->
+    <meta name="keywords" content="eléctrica, local eléctrica, material eléctrico, local eléctrica san luis">
     <link rel="shortcut icon" href="./imgs/logo-ej.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/css/style.css">
     <!-- Google font -->
