agrego: carpetas sass, animaciones sobrenosotros y servicios y limpio imgs

--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
+    <!-- descripcion -->
+    <meta name="description" content="Eléctrica Janny ofrece los mejores productos y materiales eléctricos, así como instalaciones eléctricas satisfaciendo tus necesidades">
+    <!-- keywords -->
+    <meta name="keywords" content="eléctrica, local eléctrica, material eléctrico, local eléctrica san luis">
+    <title>Eléctrica Janny</title>
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- Animacion AOS -->
+    <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- Animacion animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <title>Eléctrica Janny</title>
-    <!-- Descripcion -->
-    <meta name="description" content="Eléctrica Janny ofrece los mejores productos y materiales eléctricos, así como instalaciones eléctricas satisfaciendo tus necesidades">
-    <!-- Keywords -->
-    <meta name="keywords" content="eléctrica, local eléctrica, material eléctrico, local eléctrica san luis">
-    <link rel="shortcut icon" href="./imgs/logo-ej.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/css/style.css">
-    <!-- Google font -->
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- tipografia -->
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- icon -->
+    <link rel="shortcut icon" href="./imgs/logo-ej.jpg" type="image/x-icon">
+    <!-- css -->
+    <link rel="stylesheet" href="./styles/css/style.css">
 </head>
 
 <body class="grid-all">
@@ -69,16 +71,16 @@
         <section class="index-seccion-2">
             <article class="index-articulo-1">
                 <div class="div-parrafos">
-                    <p data-aos="fade-down-right" data-aos-duration="500" class="index-parrafos-top">En <b>Eléctrica
-                            Janny</b> somos una empresa dedicada al suministro de
+                    <p data-aos="fade-down-right" class="index-parrafos-top"><b>Eléctrica
+                            Janny</b> es una empresa dedicada al suministro de
                         <b>material eléctrico</b> de las principales marcas en San Luis Río Colorado, Sonora.
                     </p>
-                    <p data-aos="fade-right" data-aos-duration="500" class="index-parrafos">Somos profesionales que se
+                    <p data-aos="fade-right" class="index-parrafos">Somos profesionales que se
                         adaptan a las exigencias de tus requerimientos
                         para satisfacer
                         completamente tus necesidades, por lo que te atendemos y asesoramos en un horario muy accesible
                         logrando así que nos visites y aclaremos todas las dudas que tengas.</p>
-                    <p data-aos="fade-up-right" data-aos-duration="500" class="index-parrafos">A diferencia de la
+                    <p data-aos="fade-up-right" class="index-parrafos">A diferencia de la
                         competencia, al venir a <b>Eléctrica Janny</b>
                         encontrarás los mejores productos,
                         siempre en perfectas condiciones para garantizar la durabilidad de cada material eléctrico que
@@ -95,19 +97,19 @@
                         class="index-imgs">
                 </div>
                 <div class="div-parrafos">
-                    <p data-aos="fade-down-left" data-aos-duration="500" class="index-parrafos-top">Al visitarnos,
+                    <p data-aos="fade-down-left" class="index-parrafos-top">Al visitarnos,
                         recibirás asesoría integral sobre cada uno de los
                         servicios
                         que
                         tenemos.
                         Nos mantenemos actualizados respecto a los productos más innovadores del mercado
                         constantemente.</p>
-                    <p data-aos="fade-left" data-aos-duration="500" class="index-parrafos">Elaboramos proyectos que se
+                    <p data-aos="fade-left" class="index-parrafos">Elaboramos proyectos que se
                         adecuan a lo que nos solicites, por lo que
                         para nosotros trabajar de
                         la
                         mano contigo es lo más importante. Juntos lograremos el mejor resultado.
-                    <p data-aos="fade-up-left" data-aos-duration="500" class="index-parrafos">Acércate a nuestra
+                    <p data-aos="fade-up-left" class="index-parrafos">Acércate a nuestra
                         sucursal, visita nuestro <a class="index-sitio-oficial" href="./index.html">sitio oficial</a> y
                         síguenos en <a class="index-siguenos" href="https://www.facebook.com/electrijanny"
                             target="_blank" rel="noopener noreferrer">Facebook</a>, no te
@@ -138,7 +140,7 @@
         </div>
         <div class="footer-copyright">
             <h3 class="footer-span-localidad">San Luis Río Colorado, Sonora, México</h3>
-            <h3 class="footer-span-copyrigth">Derechos Reservados 2023</>
+            <h3 class="footer-span-copyrigth">Derechos Reservados 2023</h3>
                 <h3>By Eléctrica Janny</h3>
         </div>
     </footer>
@@ -147,7 +149,10 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init({
+            easing: 'ease-our-back',
+            duration: 700
+        });
     </script>
 </body>
 
