--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,19 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
+    <title>Eléctrica Janny</title>
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- Animacion AOS -->
+    <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- Animate.css -->
+    <!-- animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <title>Eléctrica Janny</title>
-    <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/css/style.css">
-    <!-- Google font -->
+    <!-- tipografia -->
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- icon -->
+    <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
+    <!-- css -->
+    <link rel="stylesheet" href="../styles/css/style.css">
 </head>
 
 <body class="grid-all">
@@ -68,7 +70,7 @@
         <section>
             <article class="servicios-articulo-1">
                 <div class="card-group">
-                    <div class="card">
+                    <div data-aos="fade-up-right" class="card">
                         <img src="../imgs/servicio-casa-card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Trabajos</b></h5>
@@ -87,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div data-aos="flip-down" class="card">
                         <img src="../imgs/servicios-foco-card.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Reparaciones</b></h5>
@@ -104,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div data-aos="fade-up-left" class="card">
                         <img src="../imgs/servicio-hombre-card.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Ventas</b></h5>
@@ -140,4 +142,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            easing: 'ease-our-back',
+            duration: 700
+        });
+    </script>
 </body>
