--- a/paginas/sobrenosotros.html
+++ b/paginas/sobrenosotros.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eléctrica Janny</title>
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <title>Eléctrica Janny</title>
-    <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/css/style.css">
+    <!-- tipografia -->
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- icon -->
+    <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
+    <!-- css -->
+    <link rel="stylesheet" href="../styles/css/style.css">
 </head>
 
 <body class="grid-all">
@@ -64,31 +70,33 @@
         <section class="sobrenosotros-seccion-2">
             <div class="container text-center">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                    <div class="col sobrenosotros-imgs">
-                        <img src="../imgs/ejemplo-sobrenosotros-1.jpg" alt="Articulos de tienda">
+                    <div data-aos="fade-right" class="col sobrenosotros-imgs">
+                        <img src="../imgs/sobrenosotros-local-calle.jpeg" alt="Articulos de tienda">
                     </div>
                     <div class="col sobrenosotros-texto">
-                        <h2>QUIÉNES SOMOS</h2>
-                        <p>Eléctrica Janny, es una empresa 100% mexicana con
+                        <h2 data-aos="fade-right">QUIÉNES SOMOS</h2>
+                        <p data-aos="fade-left">Eléctrica Janny, es una empresa 100% mexicana con
                             más de 10 años en el ramo de la distribución de material eléctrico e iluminación, fundada
                             con el propósito de atender los mercados de la industria, de la construcción, industrial y
                             minoristas.</p>
                     </div>
-                    <div class="col sobrenosotros-imgs">
-                        <img src="../imgs/sobrenosotros-local-calle.jpeg" alt="">
+                    <div data-aos="fade-left" class="col sobrenosotros-imgs">
+                        <img src="../imgs/ejemplo-sobrenosotros-1.jpg" alt="">
                     </div>
                     <div class="col sobrenosotros-texto">
-                        <h2>MISION</h2>
-                        <p>Proveer a nuestros clientes soluciones innovadoras a través de la distribución de nuevos
+                        <h2 data-aos="fade-left">MISION</h2>
+                        <p data-aos="fade-right">Proveer a nuestros clientes soluciones innovadoras a través de la
+                            distribución de nuevos
                             productos y la oferta de una amplia gama de servicios para satisfacer las necesidades de un
                             mercado diverso y en constante cambio, con el activo más valioso, nuestra gente.</p>
                     </div>
-                    <div class="col sobrenosotros-imgs">
+                    <div data-aos="flip-down" class="col sobrenosotros-imgs">
                         <img src="../imgs/sobrenosotros-centros-de-carga-grande.jpeg" alt="">
                     </div>
                     <div class="col sobrenosotros-texto">
-                        <h2>VISION</h2>
-                        <p>Ofrecer una solución integral en la venta y distribución de materiales eléctricos e
+                        <h2 data-aos="fade-right">VISION</h2>
+                        <p data-aos="fade-left">Ofrecer una solución integral en la venta y distribución de materiales
+                            eléctricos e
                             iluminación de las mejores marcas, con los precios más bajos, atención personalizada asi
                             como asesoría técnica para satisfacer las necesidades de nuestros clientes.</p>
                     </div>
@@ -113,4 +121,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            easing: 'ease-our-back',
+            duration: 700
+        });
+    </script>
 </body>
